[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/scripts/Drone.gd" type="Script" id=1]
[ext_resource path="res://assets/scenes/LifePoints.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/Drone.png" type="Texture" id=4]
[ext_resource path="res://assets/images/Life.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=58]

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 4 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=62]
animations = [ {
"frames": [ SubResource( 59 ), SubResource( 60 ), SubResource( 61 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 48, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 0, 16, 48, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 0, 32, 48, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 0, 48, 48, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "default",
"speed": 0.0
} ]

[node name="Drone" type="RigidBody2D"]
collision_layer = 4
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 58 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 62 )
frame = 2
playing = true

[node name="TowardsPlayer" type="RayCast2D" parent="."]
cast_to = Vector2( 50, 50 )
collision_mask = 3

[node name="LifePoints" parent="." instance=ExtResource( 3 )]
position = Vector2( 0.5, 16.5 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 5 )

[node name="NearObstacle" type="RayCast2D" parent="."]
cast_to = Vector2( 50, 0 )

[connection signal="body_entered" from="." to="." method="_on_Drone_body_entered"]
